--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -210,7 +210,7 @@
   --sbb-selection-icon-color-disabled: var(--sbb-color-granite);
   --sbb-selection-border-color-focused: var(--sbb-color-weak-accent);
 
-  --sbb-selection-label-color-checked: var(--sbb-color-iron);
+  --sbb-selection-label-color-checked: var(--sbb-color-text);
   --sbb-selection-label-color-unchecked: var(--sbb-color-granite);
   --sbb-selection-label-color-disabled: var(--sbb-color-granite);
 
