feat(angular/notification): implement dark mode

--- a/src/angular/notification/notification.scss
+++ b/src/angular/notification/notification.scss
@@ -47,20 +47,27 @@
 }
 
 :where(html.sbb-lean) .sbb-notification-success {
-  color: var(--sbb-color-green);
-  background-color: var(--sbb-color-background);
-  border-color: var(--sbb-color-green);
+  color: var(--sbb-notification-label-color-success);
+  background-color: var(--sbb-notification-background-color-success);
+  border-color: var(--sbb-notification-border-color-success);
 }
 
 :where(html.sbb-lean) .sbb-notification-info {
-  color: var(--sbb-color-granite);
-  background-color: var(--sbb-color-background);
-  border-color: var(--sbb-color-granite);
+  color: var(--sbb-notification-label-color-information);
+  background-color: var(--sbb-notification-background-color-information);
+  border-color: var(--sbb-notification-border-color-information);
 }
 
 :where(html.sbb-lean) .sbb-notification-warn {
-  background-color: var(--sbb-color-peach);
-  color: var(--sbb-color-black);
+  background-color: var(--sbb-notification-background-color-warn);
+  color: var(--sbb-notification-label-color-warn);
+  border-color: var(--sbb-notification-border-color-warn);
+}
+
+:where(html.sbb-lean) .sbb-notification-error {
+  background-color: var(--sbb-notification-background-color-error);
+  color: var(--sbb-notification-label-color-error);
+  border-color: var(--sbb-notification-border-color-error);
 }
 
 .sbb-notification-has-jump-marks {
