--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -470,13 +470,14 @@
     71% 100%
   );
   --sbb-box-shadow-color: rgba(0, 0, 0, 0.15);
+  --sbb-box-shadow-border-color: var(--sbb-color-cloud);
   --sbb-box-shadow-below: 0 var(--sbb-box-shadow-width) 0 var(--sbb-box-shadow-color);
   --sbb-box-shadow-horizontal-border-top: 0
     calc(var(--sbb-border-width) + calc(#{sbb.pxToRem(1)} * var(--sbb-scaling-factor))) 0
-    calc(var(--sbb-border-width) * -1) var(--sbb-color-cloud);
+    calc(var(--sbb-border-width) * -1) var(--sbb-box-shadow-border-color);
   --sbb-box-shadow-horizontal-border-bottom: 0
     calc(var(--sbb-border-width) * -1 - calc(#{sbb.pxToRem(1)} * var(--sbb-scaling-factor))) 0
-    calc(var(--sbb-border-width) * -1) var(--sbb-color-cloud);
+    calc(var(--sbb-border-width) * -1) var(--sbb-box-shadow-border-color);
   --sbb-box-shadow-horizontal-border-offset-top-above: calc(
     calc(var(--sbb-border-width) - #{sbb.pxToRem(1)}) * var(--sbb-scaling-factor)
   );
@@ -650,6 +651,10 @@
     --sbb-datepicker-calendar-body-cell-padding: #{sbb.pxToRem(16.5)};
     --sbb-datepicker-calendar-body-cell-size: #{sbb.pxToRem(30)};
 
+    // Dialog
+    --sbb-dialog-overlay-backgroud-color: var(--sbb-color-white-alpha70);
+    --sbb-dialog-container-border-color: var(--sbb-color-black);
+
     // Fieldset
     --sbb-fieldset-legend-font-size: #{sbb.pxToRem(21)};
     --sbb-fieldset-legend-nested-font-size: #{sbb.pxToRem(16)};
@@ -736,6 +741,9 @@
       --sbb-color-weak-accent: var(--sbb-color-milk);
       --sbb-color-error: var(--sbb-color-red_dark-mode);
 
+      // Shadow-Color
+      --sbb-box-shadow-border-color: var(--sbb-color-iron);
+
       // Notification Toast
       // Success
       --sbb-notification-toast-label-color-success: var(--sbb-color-white);
@@ -777,6 +785,10 @@
       --sbb-chips-background-color-hover: var(--sbb-color-metal);
       --sbb-chips-background-color-disabled: var(--sbb-color-cloud);
       --sbb-chips-opacity: 0.9;
+
+      // Dialog
+      --sbb-dialog-overlay-backgroud-color: #{rgba(sbb.$sbbColorBlack, 0.7)};
+      --sbb-dialog-container-border-color: var(--sbb-color-silver);
 
       // Badge
       --sbb-badge-background-color: var(--sbb-color-white);
