--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -351,7 +351,7 @@
   --sbb-menu-item-background-color-active: var(--sbb-color-cloud);
   --sbb-menu-title-color: var(--sbb-color-granite);
 
-  // Notification Toast
+  // Notification
   // Success
   --sbb-notification-label-color-success: var(--sbb-color-green);
   --sbb-notification-background-color-success: var(--sbb-color-white);
