feat(angular/notification): implement dark mode

--- a/src/angular/notification/notification.scss
+++ b/src/angular/notification/notification.scss
@@ -24,18 +24,6 @@
   }
 }
 
-:is(.sbb-notification-success, .sbb-notification-info) {
-  background-color: var(--sbb-color-granite);
-}
-
-.sbb-notification-warn {
-  background-color: var(--sbb-color-red);
-}
-
-.sbb-notification-error {
-  background-color: var(--sbb-color-error);
-}
-
 .sbb-notification-info-light {
   color: var(--sbb-color-granite);
   background-color: var(--sbb-color-white);
@@ -46,25 +34,25 @@
   }
 }
 
-:where(html.sbb-lean) .sbb-notification-success {
+.sbb-notification-success {
   color: var(--sbb-notification-label-color-success);
   background-color: var(--sbb-notification-background-color-success);
   border-color: var(--sbb-notification-border-color-success);
 }
 
-:where(html.sbb-lean) .sbb-notification-info {
+.sbb-notification-info {
   color: var(--sbb-notification-label-color-information);
   background-color: var(--sbb-notification-background-color-information);
   border-color: var(--sbb-notification-border-color-information);
 }
 
-:where(html.sbb-lean) .sbb-notification-warn {
+.sbb-notification-warn {
   background-color: var(--sbb-notification-background-color-warn);
   color: var(--sbb-notification-label-color-warn);
   border-color: var(--sbb-notification-border-color-warn);
 }
 
-:where(html.sbb-lean) .sbb-notification-error {
+.sbb-notification-error {
   background-color: var(--sbb-notification-background-color-error);
   color: var(--sbb-notification-label-color-error);
   border-color: var(--sbb-notification-border-color-error);
