--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -353,12 +353,12 @@
 
   // Notification
   // Success
-  --sbb-notification-label-color-success: var(--sbb-color-green);
-  --sbb-notification-background-color-success: var(--sbb-color-white);
-  --sbb-notification-border-color-success: var(--sbb-color-green);
+  --sbb-notification-label-color-success: var(--sbb-color-white);
+  --sbb-notification-background-color-success: var(--sbb-color-granite);
+  --sbb-notification-border-color-success: var(--sbb-color-granite);
   // Information
-  --sbb-notification-label-color-information: var(--sbb-color-granite);
-  --sbb-notification-background-color-information: var(--sbb-color-white);
+  --sbb-notification-label-color-information: var(--sbb-color-white);
+  --sbb-notification-background-color-information: var(--sbb-color-granite);
   --sbb-notification-border-color-information: var(--sbb-color-granite);
   // Error
   --sbb-notification-label-color-error: var(--sbb-color-white);
@@ -366,8 +366,8 @@
   --sbb-notification-border-color-error: var(--sbb-color-error);
   // Warn
   --sbb-notification-label-color-warn: var(--sbb-color-white);
-  --sbb-notification-background-color-warn: var(--sbb-color-peach);
-  --sbb-notification-border-color-warn: var(--sbb-color-peach);
+  --sbb-notification-background-color-warn: var(--sbb-color-error);
+  --sbb-notification-border-color-warn: var(--sbb-color-error);
 
   // Table
   --sbb-table-background-color: var(--sbb-color-background);
@@ -573,13 +573,6 @@
     }
   }
   &:where(.sbb-lean) {
-    // Notification Toast
-    // Error
-    --sbb-notification-background-color-error: var(--sbb-color-red);
-    // Warn
-    --sbb-notification-label-color-warn: var(--sbb-color-black);
-    --sbb-notification-background-color-warn: var(--sbb-color-peach);
-
     // Context Colors
     --sbb-color-weak-accent: var(--sbb-color-iron);
 
@@ -666,6 +659,18 @@
     --sbb-notification-message-padding: #{sbb.pxToRem(11)};
     --sbb-notification-message-padding-horizontal: #{sbb.pxToRem(15)};
 
+    // Notification
+    // Success
+    --sbb-notification-label-color-success: var(--sbb-color-green);
+    --sbb-notification-background-color-success: var(--sbb-color-white);
+    --sbb-notification-border-color-success: var(--sbb-color-green);
+    // Information
+    --sbb-notification-label-color-information: var(--sbb-color-granite);
+    --sbb-notification-background-color-information: var(--sbb-color-white);
+    // Warn
+    --sbb-notification-background-color-warn: var(--sbb-color-peach);
+    --sbb-notification-border-color-warn: var(--sbb-color-peach);
+
     // Expansion Panel
     --sbb-expansion-panel-padding-horizontal: #{sbb.pxToRem(16)};
     --sbb-expansion-panel-header-padding-top: calc(
@@ -748,7 +753,6 @@
       --sbb-notification-border-color-information: var(--sbb-color-cloud);
 
       // Error
-      --sbb-notification-label-color-error: var(--sbb-color-white);
       --sbb-notification-background-color-error: var(--sbb-color-red);
       --sbb-notification-border-color-error: var(--sbb-color-red);
 
