--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1124,7 +1124,7 @@ textarea {
 .sbb-text-lead {
   font-family: var(--sbb-font-light);
   font-weight: normal;
-  color: sbb.$sbbColorText;
+  color: var(--sbb-color-text);
   font-size: var(--sbb-font-size-large);
   line-height: 1.3;
   margin: var(--sbb-divider-medium) 0;
