--- a/src/showcase/app/app.component.scss
+++ b/src/showcase/app/app.component.scss
@@ -7,3 +7,11 @@
 .sbb-icon-sidebar.sbb-icon-sidebar-expanded {
   width: sbb.pxToEm(260);
 }
+
+.sbb-select {
+  min-width: 150px;
+}
+
+.additional-header-content {
+  display: flex;
+}
